fix faded text in dark mode

--- a/assets/_colour.scss
+++ b/assets/_colour.scss
@@ -6,7 +6,7 @@ $mid-grey: #a6acbe;
 $text-light: #000;
 $text-light-faded: #555;
 $text-dark: #eee;
-$text-dark-faded: #fff;
+$text-dark-faded: rgba(221, 221, 221, 0.651);
 
 $accent-faded: hsl(37, 100%, 88%, 0.4);
 
